tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Color-Palettes - ID 60/Read and Edit Palette.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="123" name="Read and Edit Palette.Color_Formula::Comment"></ScriptReference>
	<ObjectList membercount="19">
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20210916 MrW Removed lingering pesky German :D"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20121102 MrW "></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="85" name="AnwenderAbbruchZulassen setzen" enable="True">
			<Options>65536</Options>
			<ParameterValues membercount="1">
				<Parameter type="Boolean">
					<Boolean id="131072" value="False"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="86" name="Fehleraufzeichnung setzen" enable="True">
			<Options>196608</Options>
			<ParameterValues membercount="1">
				<Parameter type="Boolean">
					<Boolean id="131072" value="True"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="71" name="Schleife (Anfang)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="List">
					<List name="Immer" value="1"></List>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="68" name="Wenn" enable="True">
			<Options>16384</Options>
			<ParameterValues membercount="1">
				<Parameter type="Calculation">
					<Calculation datatype="7" position="0">
						<Calculation>
							<Text><![CDATA[NICHT IstLeer( Palette.Color_Formula::Comment )]]></Text>
							<ChunkList hash="A9C2EFAB076888AA0CCA5A6F6CA3373C">
								<Chunk type="FunctionRef">NICHT</Chunk>
								<Chunk type="NoRef"> </Chunk>
								<Chunk type="FunctionRef">IstLeer</Chunk>
								<Chunk type="NoRef">( </Chunk>
								<Chunk type="FieldRef">
									<FieldReference id="19" name="Comment" repetition="1">
										<TableOccurrenceReference id="1065127" name="Palette.Color_Formula"></TableOccurrenceReference>
									</FieldReference>
								</Chunk>
								<Chunk type="NoRef"> )</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="Read"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="87" name="Eigenes Dialogfeld anzeigen" enable="True">
			<Options>16388</Options>
			<ParameterValues membercount="5">
				<Parameter type="Title">
					<Calculation datatype="1" position="0">
						<Calculation>
							<Text><![CDATA[Palette.Color_Formula::ColorName]]></Text>
							<ChunkList hash="404B1615D4545E0823090DD25AE895DA">
								<Chunk type="FieldRef">
									<FieldReference id="2" name="ColorName" repetition="1">
										<TableOccurrenceReference id="1065127" name="Palette.Color_Formula"></TableOccurrenceReference>
									</FieldReference>
								</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
				<Parameter type="Message">
					<Calculation datatype="1" position="1">
						<Calculation>
							<Text><![CDATA[Austauschen( Palette.Color_Formula::Comment ; "\¶" ; "¶" )]]></Text>
							<ChunkList hash="FCAE4671916973CB690DB6437C443623">
								<Chunk type="FunctionRef">Austauschen</Chunk>
								<Chunk type="NoRef">( </Chunk>
								<Chunk type="FieldRef">
									<FieldReference id="19" name="Comment" repetition="1">
										<TableOccurrenceReference id="1065127" name="Palette.Color_Formula"></TableOccurrenceReference>
									</FieldReference>
								</Chunk>
								<Chunk type="NoRef"> ; &quot;\¶&quot; ; &quot;¶&quot; )</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
				<Parameter type="Button1" value="OK">
					<Boolean type="Commit" value="False"></Boolean>
				</Parameter>
				<Parameter type="Button2" value="Edit">
					<Boolean type="Commit" value="False"></Boolean>
				</Parameter>
				<Parameter type="Button3">
					<Boolean type="Commit" value="False"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="72" name="Verlasse Schleife wenn" enable="True">
			<Options>16384</Options>
			<ParameterValues membercount="1">
				<Parameter type="Calculation">
					<Calculation datatype="7" position="0">
						<Calculation>
							<Text><![CDATA[Hole ( LetzteMeldungswahl ) = 1]]></Text>
							<ChunkList hash="8C579970D437A4505D25C8DA36467E6A">
								<Chunk type="FunctionRef">Hole</Chunk>
								<Chunk type="NoRef"> ( </Chunk>
								<Chunk type="FunctionRef">LetzteMeldungswahl</Chunk>
								<Chunk type="NoRef"> ) = 1</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="70" name="Ende (wenn)" enable="True">
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="Edit"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="141" name="Variable setzen" enable="True">
			<Options>16388</Options>
			<ParameterValues membercount="1">
				<Parameter type="Variable">
					<value>
						<Calculation datatype="1" position="1">
							<Calculation>
								<Text><![CDATA[Palette.Color_Formula::Comment]]></Text>
								<ChunkList hash="DAC48E99FB4DE14075911F45F2E0B82C">
									<Chunk type="FieldRef">
										<FieldReference id="19" name="Comment" repetition="1">
											<TableOccurrenceReference id="1065127" name="Palette.Color_Formula"></TableOccurrenceReference>
										</FieldReference>
									</Chunk>
								</ChunkList>
							</Calculation>
						</Calculation>
					</value>
					<Name value="$Comment"></Name>
					<repetition></repetition>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="87" name="Eigenes Dialogfeld anzeigen" enable="True">
			<Options>16389</Options>
			<ParameterValues membercount="6">
				<Parameter type="Title">
					<Calculation datatype="1" position="0">
						<Calculation>
							<Text><![CDATA["\"" & Palette.Color_Formula::ColorName & "\""]]></Text>
							<ChunkList hash="ECB335246C527CD95C803F4FCB92E1EB">
								<Chunk type="NoRef">&quot;\&quot;&quot; &amp; </Chunk>
								<Chunk type="FieldRef">
									<FieldReference id="2" name="ColorName" repetition="1">
										<TableOccurrenceReference id="1065127" name="Palette.Color_Formula"></TableOccurrenceReference>
									</FieldReference>
								</Chunk>
								<Chunk type="NoRef"> &amp; &quot;\&quot;&quot;</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
				<Parameter type="Message">
					<Calculation datatype="1" position="1">
						<Calculation>
							<Text><![CDATA["You may enter a comment to explain what this entry is about."]]></Text>
							<ChunkList hash="3BF7D0ABDF9253F6BAC3502AB9056A70">
								<Chunk type="NoRef">&quot;You may enter a comment to explain what this entry is about.&quot;</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
				<Parameter type="Button1" value="OK">
					<Boolean type="Commit" value="True"></Boolean>
				</Parameter>
				<Parameter type="Button2" value="Cancel">
					<Boolean type="Commit" value="False"></Boolean>
				</Parameter>
				<Parameter type="Button3">
					<Boolean type="Commit" value="False"></Boolean>
				</Parameter>
				<Parameter type="Field1">
					<Parameter type="Target">
						<FieldReference id="19" name="Comment">
							<repetition value="1"></repetition>
							<TableOccurrenceReference id="1065127" name="Palette.Color_Formula"></TableOccurrenceReference>
						</FieldReference>
					</Parameter>
					<Boolean type="Passwort" value="False"></Boolean>
					<Parameter type="Label">
						<Calculation datatype="1" position="2">
							<Calculation>
								<Text><![CDATA["Comment"]]></Text>
								<ChunkList hash="26B16D9CEE8EB7A643A9BB508F2E0546">
									<Chunk type="NoRef">&quot;Comment&quot;</Chunk>
								</ChunkList>
							</Calculation>
						</Calculation>
					</Parameter>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="72" name="Verlasse Schleife wenn" enable="True">
			<Options>16384</Options>
			<ParameterValues membercount="1">
				<Parameter type="Calculation">
					<Calculation datatype="7" position="0">
						<Calculation>
							<Text><![CDATA[IstLeer( Palette.Color_Formula::Comment ) ODER Palette.Color_Formula::Comment = $Comment]]></Text>
							<ChunkList hash="AB6E600F5ACCF726B3B46C84B71F13DD">
								<Chunk type="FunctionRef">IstLeer</Chunk>
								<Chunk type="NoRef">( </Chunk>
								<Chunk type="FieldRef">
									<FieldReference id="19" name="Comment" repetition="1">
										<TableOccurrenceReference id="1065127" name="Palette.Color_Formula"></TableOccurrenceReference>
									</FieldReference>
								</Chunk>
								<Chunk type="NoRef"> ) </Chunk>
								<Chunk type="FunctionRef">ODER</Chunk>
								<Chunk type="NoRef"> </Chunk>
								<Chunk type="FieldRef">
									<FieldReference id="19" name="Comment" repetition="1">
										<TableOccurrenceReference id="1065127" name="Palette.Color_Formula"></TableOccurrenceReference>
									</FieldReference>
								</Chunk>
								<Chunk type="NoRef"> = </Chunk>
								<Chunk type="VariableReference">$Comment</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="73" name="Schleife (Ende)" enable="True">
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
	</ObjectList>
</Script>
