tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Color-Palettes - ID 60/Set Palette as Default - ID 77.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="77" name="Set Palette as Default"></ScriptReference>
	<ObjectList membercount="19">
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20121101 MrW "></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="68" name="Wenn" enable="True">
			<Options>16384</Options>
			<ParameterValues membercount="1">
				<Parameter type="Calculation">
					<Calculation datatype="7" position="0">
						<Calculation>
							<Text><![CDATA[_Palette::__ID = 1]]></Text>
							<ChunkList hash="6552933A618B65C2C203F582EEAB38F2">
								<Chunk type="FieldRef">
									<FieldReference id="1" name="__ID" repetition="1">
										<TableOccurrenceReference id="1065115" name="_Palette"></TableOccurrenceReference>
									</FieldReference>
								</Chunk>
								<Chunk type="NoRef"> = 1</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="87" name="Eigenes Dialogfeld anzeigen" enable="True">
			<Options>16389</Options>
			<ParameterValues membercount="5">
				<Parameter type="Title">
					<Calculation datatype="1" position="0">
						<Calculation>
							<Text><![CDATA["Set Default"]]></Text>
							<ChunkList hash="7E839A79CC15974082502908C773DDB1">
								<Chunk type="NoRef">&quot;Set Default&quot;</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
				<Parameter type="Message">
					<Calculation datatype="1" position="1">
						<Calculation>
							<Text><![CDATA["This palette IS the default colors palette!"]]></Text>
							<ChunkList hash="D9AC9F7E7A788381E37EC483435022BE">
								<Chunk type="NoRef">&quot;This palette IS the default colors palette!&quot;</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
				<Parameter type="Button1" value="OK">
					<Boolean type="Commit" value="True"></Boolean>
				</Parameter>
				<Parameter type="Button2">
					<Boolean type="Commit" value="False"></Boolean>
				</Parameter>
				<Parameter type="Button3">
					<Boolean type="Commit" value="False"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="103" name="Aktuelles Script verlassen" enable="True">
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="--&gt;"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="70" name="Ende (wenn)" enable="True">
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="141" name="Variable setzen" enable="True">
			<Options>16388</Options>
			<ParameterValues membercount="1">
				<Parameter type="Variable">
					<value>
						<Calculation datatype="1" position="1">
							<Calculation>
								<Text><![CDATA[_Palette::__ID]]></Text>
								<ChunkList hash="BE8A01A36B8393A88C6928ED8AB541B0">
									<Chunk type="FieldRef">
										<FieldReference id="1" name="__ID" repetition="1">
											<TableOccurrenceReference id="1065115" name="_Palette"></TableOccurrenceReference>
										</FieldReference>
									</Chunk>
								</ChunkList>
							</Calculation>
						</Calculation>
					</value>
					<Name value="$ID"></Name>
					<repetition></repetition>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="76" name="Feldwert setzen" enable="True">
			<Options>16385</Options>
			<ParameterValues membercount="2">
				<Parameter type="FieldReference">
					<FieldReference id="11" name="_gID_ActivePalette">
						<repetition value="1"></repetition>
						<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
					</FieldReference>
				</Parameter>
				<Parameter type="Calculation">
					<Calculation datatype="1" position="0">
						<Calculation>
							<Text><![CDATA[_Palette::__ID]]></Text>
							<ChunkList hash="BE8A01A36B8393A88C6928ED8AB541B0">
								<Chunk type="FieldRef">
									<FieldReference id="1" name="__ID" repetition="1">
										<TableOccurrenceReference id="1065115" name="_Palette"></TableOccurrenceReference>
									</FieldReference>
								</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="75" name="Schreibe Änderung Datens./Abfrage" enable="True">
			<Options>128</Options>
			<ParameterValues membercount="3">
				<Parameter type="Boolean">
					<Boolean type="Dateneingabeüberprüfung unterdrücken" id="256" value="False"></Boolean>
				</Parameter>
				<Parameter type="Boolean">
					<Boolean type="Mit Dialog" id="128" value="False"></Boolean>
				</Parameter>
				<Parameter type="Boolean">
					<Boolean type="Schreiben erzwingen" id="512" value="False"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="6" name="Gehe zu Layout" enable="True">
			<Options>8</Options>
			<ParameterValues membercount="2">
				<Parameter type="LayoutReferenceContainer">
					<LayoutReferenceContainer value="5">
						<LayoutReference id="6" name="Syntax"></LayoutReference>
					</LayoutReferenceContainer>
				</Parameter>
				<Parameter type="Animation">
					<Animation name="Ohne" value="0"></Animation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="23" name="Alle Datensätze anzeigen" enable="True">
		</Step>
		<Step id="1" name="Script ausführen" enable="True">
			<Options>64</Options>
			<ParameterValues membercount="2">
				<Parameter type="List">
					<List name="Aus Liste" value="1">
						<ScriptReference id="43" name="Change Palette"></ScriptReference>
					</List>
				</Parameter>
				<Parameter type="Parameter">
					<Parameter></Parameter>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
	</ObjectList>
</Script>
